--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 
 # pyproject.toml
 [project]
-name = "WWAA-CustomNodes" # Unique identifier for your node. Immutable after creation.
+name = "wwaa-customnodes" # Unique identifier for your node. Immutable after creation.
 description = "Custom Nodes for ComfyUI made by the team at WeirdWonderfulAI.Art These are developed based on the needs where there was a gap to make our workflows better. You are welcome to use it as you see fit."
-version = "1.0.1" # Custom Node version. Must be semantically versioned.
+version = "1.0.2" # Custom Node version. Must be semantically versioned.
 license = {file = "LICENSE"}
 dependencies  = [] # Filled in from requirements.txt
 
@@ -12,5 +12,5 @@ Repository = "https://github.com/hgabha/WWAA-CustomNodes"
 
 [tool.comfy]
 PublisherId = "wwaa" # TODO (fill in Publisher ID from Comfy Registry Website).
-DisplayName = "WWAA CustomNodes" # Display name for the Custom Node. Can be changed later.
+DisplayName = "WWAA-CustomNodes" # Display name for the Custom Node. Can be changed later.
 Icon = "" # SVG, PNG, JPG or GIF (MAX. 800x400px)
